# exonize

./: .gitignore  404.html  Exonize.py  ExonizeEvents.py  README.md  alignment_tools_comparison.py  data_base_op.py  duplication_search.py  exon_analysis.py  exon_dup_tools_evaluation.ipynb  exon_duplication_search.py  exonize.py  exonize.sh  exonize_analyzer.py  exonize_handler.py  extra.css  fun.py  genome_analysis.py  global_var.py  index.html  module_requirements.sh  objects.inv  parsing_gff_homo_01.ipynb  pyproject.toml  reading_gff_homo_01.ipynb  requirements.txt  results_db.py  setup.cfg  setup.py  simulate-gene-data-homo-01.ipynb  simulate_genome.py  sqlite_utils.py  test.py  test_.py  test_functions.py  utils.py
.github/workflows/: python-app.yml
03-test-cases/: README.md
03-test-cases/00-human/: exon_dup_tools_evaluation.ipynb  parsing_gff_homo_01.ipynb  parsing_gff_homo_Ch1.ipynb  simulate-larger-sample.ipynb
03-test-cases/01-lepidoptera/: de_novo_annotation_analysis_pieris_napi.ipynb  exon_dup_tools_evaluation.ipynb  parsing_gff_pieris_napi.ipynb  simulate_genome_Pieris_napis.ipynb  (+1 more)
docs/: exonize_analysis.md  extra.css  index.md  output.md  tutorial.md  usage.md
exonize/: blast_searcher.py  classifier_handler.py  counter_handler.py  data_preprocessor.py  environment_setup.py  exonize.py  exonize.sh  exonize_analysis.py  exonize_analyzer.py  exonize_handler.py  profiling.py  reconciler_handler.py  searcher.py  sqlite_handler.py  sqlite_utils.py  utils.py
exonize_analysis/: index.html
output/: index.html
test_data/: exonize.sh  fetch_data.sh
test_human_ch21/: exonize.sh
test_human_chrom_Y/: exonize.sh  fetch_data.sh
tests/: classification_test.py  test_Exonize.py  test_blast_searcher.py  test_classification.py  test_classifier_handler.py  test_counter_handler.py  test_data_preprocessor.py  test_reconciler_handler.py  test_searcher.py  test_utils.py
tutorial/: index.html
usage/: index.html
(+5 files in other folders)
