[project]
name = "Exonize"
description = "Find duplicated exons"
version = "0.1"
dependencies = [
	     "gffutils>=0.11.1",
	     "portion>=2.4.0",
	     "biopython>=1.81",
	     "networkx==3.2.1",
		 "rich==13.7.0",
	     "matplotlib==3.8.2"
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project.scripts]
exonize = "exonize.exonize:main"
[tool.setuptools]
packages = ['exonize']
